# StudyFlow

./: .gitignore  manage.py  pyproject.toml
config/: settings.py
core/courses/: models.py
core/lessons/: models.py
core/requests_courses/: apps.py  models.py
temlate/: index.html
